notebot fix